crates/figue/tests/integration/snapshots/main__integration__err__error_char_with_multiple_chars.snap
---
source: crates/figue/tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: failed to parse "abc" as char at letter
   ╭─[ <cli>:1:10 ]
   │
 1 │ --letter abc
   │          ─┬─  
   │           ╰─── failed to parse "abc" as char at letter
───╯
